Refactor code style and enhance configuration for bus fleet management
- Updated formatting for consistency across Java files.
- Introduced FleetConfiguration to manage multiple bus lines and stops.
- Added GpsData model for handling GPS payloads from ESP32.
- Implemented GoogleMapsService for ETA calculations using Google Maps API.
- Enhanced VehicleStateService to maintain real-time vehicle states.
- Updated application.properties for new configuration settings.
- Removed deprecated RouteConfiguration class.